# copypasta-cli

./: Cargo.toml  LICENSE
src/: client.rs  main.rs  streams.rs
