[package]
name = "copypasta"
version = "0.1.0"
authors = ["Asbjørn Clemmensen <ac@givetwise.dk>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = "*"
serde_derive = "*"
serde_json = "*"
atty = "0.2"
clap = "2.32"
term_size = "0.3.1"
phoenix = {git = "https://github.com/laibulle/phoenix-rs"}
websocket = "0.20"
tokio-core = "*"
futures = "*"
base64 = "*"
env_logger = "0.6"
log = "0.4"